--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="books" style="user-select: auto;">
 				<div class="cover" style="user-select: auto;">
-					<img src="./denki_files/book01.jpg" style="user-select: auto;"><p style="user-select: auto;"></p>
+					<img src="20thdenmoku.github.io/book01.jpg" style="user-select: auto;"><p style="user-select: auto;"></p>
 				</div>
 				<div class="detail" style="user-select: auto;">
 					<p class="heading" style="user-select: auto;">二十世紀電氣目録</p>
