--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0051)https://www.kyotoanimation.co.jp/books/20thdenmoku/ -->
-<html lang="ja" style="user-select: auto;"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#" style="user-select: auto;"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript" async="" src="./denki_files/analytics.js.다운로드" style="user-select: auto;"></script><script async="" src="./denki_files/widgets.js.다운로드" style="user-select: auto;"></script>
-
-<!-- Google Tag Manager -->
-<script async="" src="./denki_files/gtm.js.다운로드" style="user-select: auto;"></script><script style="user-select: auto;">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NF8GDXW');</script>
-<!-- End Google Tag Manager -->
+<html lang="ko" style="user-select: auto;"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#" style="user-select: auto;"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript" async="" src="/analytics.js.다운로드" style="user-select: auto;"></script><script async="" src="/analytics.js.다운로드" style="user-select: auto;"></script>
 
 
 <title style="user-select: auto;">『二十世紀電氣目録』公式サイト | KAエスマ文庫</title>
