--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" style="user-select: auto;"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#" style="user-select: auto;"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript" async="" src="./denki_files/analytics.js.다운로드" style="user-select: auto;"></script><script async="" src="./denki_files/widgets.js.다운로드" style="user-select: auto;"></script>
+<html lang="ja" style="user-select: auto;"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#" style="user-select: auto;"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript" async="" src="/analytics.js.download" style="user-select: auto;"></script><script async="" src="/analytics.js.download" style="user-select: auto;"></script>
 
 
 
