--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="ja" style="user-select: auto;"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#" style="user-select: auto;"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript" async="" src="/analytics.js.download" style="user-select: auto;"></script><script async="" src="/analytics.js.download" style="user-select: auto;"></script>
+<html lang="ko" style="user-select: auto;"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#" style="user-select: auto;"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript" async="" src="/analytics.js.download" style="user-select: auto;"></script><script async="" src="/analytics.js.download" style="user-select: auto;"></script>
 
 
 
-<title style="user-select: auto;">『二十世紀電氣目録』公式サイト | KAエスマ文庫</title>
+<title style="user-select: auto;">『20세기 전기목록』홈페이지 한글화</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" style="user-select: auto;">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" style="user-select: auto;">
 <meta name="format-detection" content="telephone=no, email=no, address=no" style="user-select: auto;">
 	
-<meta name="description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする 京都アニメーション新プロジェクト始動！文庫好評発売中！＆アニメにします。" style="user-select: auto;">
-<meta name="keywords" content="京都アニメーション,京アニ,アニメーションDo,KAエスマ文庫,二十世紀電氣目録,二十世紀電気目録,でんもく,結城 弘,池田和美,長谷百香" style="user-select: auto;">
-<meta name="copyright" content="©結城 弘／京都アニメーション" style="user-select: auto;">
+<meta name="description" content="KA에스마문고『20세기 전기목록』어느 때든 사람은 사랑을 한다 교토 애니메이션 신 프로젝트 시동! 문고 호평 발매 중! & 애니화합니다." style="user-select: auto;">
+<meta name="keywords" content="교토 애니메이션,교토 애니메이션Do,KA에스마문고,20세기 전기목록,유키 히로,이케다 카즈미,하세 모모카" style="user-select: auto;">
+<meta name="copyright" content="©유키 히로／교토 애니메이션" style="user-select: auto;">
 
-<meta property="og:title" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫" style="user-select: auto;">
-<meta property="og:description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする" style="user-select: auto;">
+<meta property="og:title" content="『20세기 전기목록』홈페이지 한글화" style="user-select: auto;">
+<meta property="og:description" content="KA에스마문고『20세기 전기목록』어느 때든 사람은 사랑을 한다" style="user-select: auto;">
 <meta property="og:url" content="http://www.kyotoanimation.co.jp/books/20thdenmoku/" style="user-select: auto;">
 <meta property="og:type" content="website" style="user-select: auto;">
 <meta property="og:image" content="http://www.kyotoanimation.co.jp/books/20thdenmoku/img/social.jpg" style="user-select: auto;">
-<meta property="og:site_name" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫" style="user-select: auto;">
+<meta property="og:site_name" content="『20세기 전기목록』홈페이지 한글화" style="user-select: auto;">
 <meta property="og:locale" content="ja_JP" style="user-select: auto;">
 
 <meta name="twitter:card" content="summary_large_image" style="user-select: auto;">
