--- a/index.html
+++ b/index.html
@@ -22,20 +22,19 @@
 
 <meta name="twitter:card" content="summary_large_image" style="user-select: auto;">
 <meta name="twitter:site" content="@KA_esuma" style="user-select: auto;">
-<meta name="twitter:title" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫" style="user-select: auto;">
-<meta name="twitter:description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする" style="user-select: auto;">
+<meta name="twitter:title" content="『20세기 전기목록』홈페이지 한글화" style="user-select: auto;">
+<meta name="twitter:description" content="KA에스마문고『20세기 전기목록』어느 때든 사람은 사랑을 한다" style="user-select: auto;">
 <meta name="twitter:image" content="http://www.kyotoanimation.co.jp/books/20thdenmoku/img/social.jpg" style="user-select: auto;">
 
 <link rel="shortcut icon" href="https://www.kyotoanimation.co.jp/books/20thdenmoku/img/favicon.ico" type="image/vnd.microsoft.icon" sizes="16x16" style="user-select: auto;">
 <link rel="icon" type="image/png" href="https://www.kyotoanimation.co.jp/img/favicon.png" style="user-select: auto;">
 
 <!-- fonts -->
-<link href="./denki_files/css" rel="stylesheet" style="user-select: auto;">
+<link href="/Arita4.0_M.otf" rel="stylesheet" style="user-select: auto;">
 <!-- css -->
-<link rel="stylesheet" href="./denki_files/common.css" style="user-select: auto;">
-
-<link rel="stylesheet" href="./denki_files/main.css" style="user-select: auto;">
-<link rel="stylesheet" href="./denki_files/top.css" style="user-select: auto;">
+<link rel="stylesheet" href="/common.css" style="user-select: auto;">
+<link rel="stylesheet" href="/main.css" style="user-select: auto;">
+<link rel="stylesheet" href="/top.css" style="user-select: auto;">
 
 
 <!-- js -->
