--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" style="user-select: auto;"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#" style="user-select: auto;"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script type="text/javascript" async="" src="/analytics.js.download" style="user-select: auto;"></script><script async="" src="/analytics.js.download" style="user-select: auto;"></script>
-
+<html lang="ko" style="user-select: auto;"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#" style="user-select: auto;">
 
 
 <title style="user-select: auto;">『20세기 전기목록』 홈페이지 한글화</title>
@@ -38,35 +37,11 @@
 
 
 <!-- js -->
-<script src="./denki_files/jquery.min.js.다운로드" style="user-select: auto;"></script>
-<script style="user-select: auto;">window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script><script src="./denki_files/jquery.min.js(1).다운로드" style="user-select: auto;"></script>
-<script type="text/javascript" src="./denki_files/common.js.다운로드" style="user-select: auto;"></script>
-
-<script type="text/javascript" src="./denki_files/main.js.다운로드" style="user-select: auto;"></script>
-<script type="text/javascript" src="./denki_files/top.js.다운로드" style="user-select: auto;"></script>
-
-
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async="" src="./denki_files/js" style="user-select: auto;"></script>
-<script style="user-select: auto;">
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'UA-17203208-1');
-</script>
-
-
-
-</head>
-
-<body class="dir-index " style="user-select: auto;">
-
-<!-- Google Tag Manager (noscript) -->
-<noscript style="user-select: auto;"><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF8GDXW"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<script src="/jquery.min.js" style="user-select: auto;"></script>
+<script style="user-select: auto;">window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script><script src="/jquery.min.js" style="user-select: auto;"></script>
+<script type="text/javascript" src="/common.js" style="user-select: auto;"></script>
+<script type="text/javascript" src="/main.js" style="user-select: auto;"></script>
+<script type="text/javascript" src="/top.js" style="user-select: auto;"></script>
 
 
 <div id="overlay" style="user-select: auto; display: none;"></div>
@@ -77,18 +52,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<header class="headerWrap" style="user-select: auto;">
 		<div class="headerBox" style="user-select: auto;">
 			<div class="navigationBtn" style="user-select: auto;">
-				<h1 class="logo" style="user-select: auto;"><a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/" style="user-select: auto;"><img src="./denki_files/logo.png" style="user-select: auto;"></a></h1>
+				<h1 class="logo" style="user-select: auto;"><a href="https://20thdenmoku.github.io/" style="user-select: auto;"><img src="./denki_files/logo.png" style="user-select: auto;"></a></h1>
 				<p class="naviBtn" style="user-select: auto;"><span style="user-select: auto;"></span></p>
 			</div>
 			<nav class="navigationWrap" style="user-select: auto;">
 				<div class="navigationBgSp sp" style="user-select: auto;"></div>
-				<div class="navigationLogoSp sp" style="user-select: auto;"><a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/" style="user-select: auto;"><img src="./denki_files/logo.png" style="user-select: auto;"></a></div>
+				<div class="navigationLogoSp sp" style="user-select: auto;"><a href="https://20thdenmoku.github.io/" style="user-select: auto;"><img src="./denki_files/logo.png" style="user-select: auto;"></a></div>
 				<ul class="navigationList" style="user-select: auto;">
-					<li style="user-select: auto;"><a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/#intro" style="user-select: auto;">INTRODUCTION</a></li>
-					<li style="user-select: auto;"><a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/#story" style="user-select: auto;">STORY</a></li>
-					<li style="user-select: auto;"><a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/#chara" style="user-select: auto;">CHARACTER</a></li>
-					<li style="user-select: auto;"><a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/#special" style="user-select: auto;">SPECIAL</a></li>
-					<li style="user-select: auto;"><a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/#books" style="user-select: auto;">BOOKS</a></li>
+					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io/#intro" style="user-select: auto;">INTRODUCTION</a></li>
+					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io//#story" style="user-select: auto;">STORY</a></li>
+					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io//#chara" style="user-select: auto;">CHARACTER</a></li>
+					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io//#special" style="user-select: auto;">SPECIAL</a></li>
+					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io//#books" style="user-select: auto;">BOOKS</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -101,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<section class="keyvisualContent" style="user-select: auto;">
 			<div class="keyvisual" style="user-select: auto;"></div>
 			<div class="keyvisualCopy" style="user-select: auto;">
-				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/books/20thdenmoku/img/top/keyvisualCopy_sp.png" style="user-select: auto;"><img src="./denki_files/keyvisualCopy.png" style="user-select: auto;"></picture>
+				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/books/20thdenmoku/img/top/keyvisualCopy_sp.png" style="user-select: auto;"><img src="/keyvisualCopy.png" style="user-select: auto;"></picture>
 			</div>
 			<div class="keyvisualTopics" style="user-select: auto;">
 				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/books/20thdenmoku/img/top/topics01_sp.png" style="user-select: auto;"><img src="./denki_files/topics01.png" style="user-select: auto;"></picture>
