--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<section class="keyvisualContent" style="user-select: auto;">
 			<div class="keyvisual" style="user-select: auto;"></div>
 			<div class="keyvisualCopy" style="user-select: auto;">
-				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/books/20thdenmoku/img/top/keyvisualCopy_sp.png" style="user-select: auto;"><img src="/keyvisualCopy.png" style="user-select: auto;"></picture>
+				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/1212 sp.png" style="user-select: auto;"><img src="/keyvisualCopy.png" style="user-select: auto;"></picture>
 			</div>
 			<div class="keyvisualTopics" style="user-select: auto;">
 				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/books/20thdenmoku/img/top/topics01_sp.png" style="user-select: auto;"><img src="./denki_files/topics01.png" style="user-select: auto;"></picture>
