--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 <meta name="twitter:site" content="@KA_esuma" style="user-select: auto;">
 <meta name="twitter:title" content="『20세기 전기목록』 홈페이지 한글화" style="user-select: auto;">
 <meta name="twitter:description" content="KA에스마문고『20세기 전기목록』어느 때든 사람은 사랑을 한다" style="user-select: auto;">
-<meta name="twitter:image" content="http://www.kyotoanimation.co.jp/books/20thdenmoku/img/social.jpg" style="user-select: auto;">
+<meta name="twitter:image" content="/social.jpg" style="user-select: auto;">
 
-<link rel="shortcut icon" href="https://www.kyotoanimation.co.jp/books/20thdenmoku/img/favicon.ico" type="image/vnd.microsoft.icon" sizes="16x16" style="user-select: auto;">
-<link rel="icon" type="image/png" href="https://www.kyotoanimation.co.jp/img/favicon.png" style="user-select: auto;">
+<link rel="shortcut icon" href="/favicon.png" type="image/vnd.microsoft.icon" sizes="16x16" style="user-select: auto;">
+<link rel="icon" type="image/png" href="favicon.png" style="user-select: auto;">
 
 <!-- fonts -->
 <link href="/Arita4.0_M.otf" rel="stylesheet" style="user-select: auto;">
@@ -52,12 +52,12 @@
 	<header class="headerWrap" style="user-select: auto;">
 		<div class="headerBox" style="user-select: auto;">
 			<div class="navigationBtn" style="user-select: auto;">
-				<h1 class="logo" style="user-select: auto;"><a href="https://20thdenmoku.github.io/" style="user-select: auto;"><img src="./denki_files/logo.png" style="user-select: auto;"></a></h1>
+				<h1 class="logo" style="user-select: auto;"><a href="https://20thdenmoku.github.io/" style="user-select: auto;"><img src="logo.png" style="user-select: auto;"></a></h1>
 				<p class="naviBtn" style="user-select: auto;"><span style="user-select: auto;"></span></p>
 			</div>
 			<nav class="navigationWrap" style="user-select: auto;">
 				<div class="navigationBgSp sp" style="user-select: auto;"></div>
-				<div class="navigationLogoSp sp" style="user-select: auto;"><a href="https://20thdenmoku.github.io/" style="user-select: auto;"><img src="./denki_files/logo.png" style="user-select: auto;"></a></div>
+				<div class="navigationLogoSp sp" style="user-select: auto;"><a href="https://20thdenmoku.github.io/" style="user-select: auto;"><img src="logo.png" style="user-select: auto;"></a></div>
 				<ul class="navigationList" style="user-select: auto;">
 					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io/#intro" style="user-select: auto;">INTRODUCTION</a></li>
 					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io//#story" style="user-select: auto;">STORY</a></li>
