--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
 	<div class="keyvisualWrap" style="user-select: auto;">
 		<!--  keyvisual  -->
 		<section class="keyvisualContent" style="user-select: auto;">
-			<div class="keyvisual" style="user-select: auto;"></div>
+			<div class="keyvisual" style="user-select: auto;">
+                                <picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/001.png" style="user-select: auto;"><img src="/002.png" style="user-select: auto;"></picture>
+                        </div>
 			<div class="keyvisualCopy" style="user-select: auto;">
-				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/1212 sp.png" style="user-select: auto;"><img src="/keyvisualCopy.png" style="user-select: auto;"></picture>
+				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/sp.png" style="user-select: auto;"><img src="/keyvisualCopy.png" style="user-select: auto;"></picture>
 			</div>
 			<div class="keyvisualTopics" style="user-select: auto;">
 				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/books/20thdenmoku/img/top/topics01_sp.png" style="user-select: auto;"><img src="./denki_files/topics01.png" style="user-select: auto;"></picture>
