--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<!--  keyvisual  -->
 		<section class="keyvisualContent" style="user-select: auto;">
 			<div class="keyvisual" style="user-select: auto;">
-                                <picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/001.png" style="user-select: auto;"><img src="/002.png" style="user-select: auto;"></picture>
+                                <picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/001.jpg" style="user-select: auto;"><img src="/002.jpg" style="user-select: auto;"></picture>
                         </div>
 			<div class="keyvisualCopy" style="user-select: auto;">
 				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/sp.png" style="user-select: auto;"><img src="/keyvisualCopy.png" style="user-select: auto;"></picture>
