--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
 	<div class="keyvisualWrap" style="user-select: auto;">
 		<!--  keyvisual  -->
 		<section class="keyvisualContent" style="user-select: auto;">
-			<div class="keyvisual" style="user-select: auto;">
-                                <picture style="user-select: auto;"><source media="(max-width:768px)" background-image: srcset="/001.jpg" style="user-select: auto;"><background-image: img src="/002.jpg" style="user-select: auto;"></picture>
-                        </div>
+			<div class="keyvisual" style="user-select: auto;"></div>
 			<div class="keyvisualCopy" style="user-select: auto;">
 				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/sp.png" style="user-select: auto;"><img src="/keyvisualCopy.png" style="user-select: auto;"></picture>
 			</div>
