--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			</nav>
 		</div>
 	</header>
-	<!--  ロード後の再生用  -->
+	<!--  ロード後の再生用 여기까지 -->
 		<!--<a href="https://www.youtube.com/watch?v=nemFfWRxcSQ" class="loadMovie"></a>-->
 	<!-- キービジュアルコンテンツ -->
 	<div class="keyvisualWrap" style="user-select: auto;">
