--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
 				<div class="navigationLogoSp sp" style="user-select: auto;"><a href="https://20thdenmoku.github.io/" style="user-select: auto;"><img src="logo.png" style="user-select: auto;"></a></div>
 				<ul class="navigationList" style="user-select: auto;">
 					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io/#intro" style="user-select: auto;">INTRODUCTION</a></li>
-					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io//#story" style="user-select: auto;">STORY</a></li>
-					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io//#chara" style="user-select: auto;">CHARACTER</a></li>
-					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io//#special" style="user-select: auto;">SPECIAL</a></li>
-					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io//#books" style="user-select: auto;">BOOKS</a></li>
+					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io/#story" style="user-select: auto;">STORY</a></li>
+					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io/#chara" style="user-select: auto;">CHARACTER</a></li>
+					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io/#special" style="user-select: auto;">SPECIAL</a></li>
+					<li style="user-select: auto;"><a href="https://20thdenmoku.github.io/#books" style="user-select: auto;">BOOKS</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
-	<!--  ロード後の再生用 여기까지 -->
+	<!--  ロード後の再生用 -->
 		<!--<a href="https://www.youtube.com/watch?v=nemFfWRxcSQ" class="loadMovie"></a>-->
 	<!-- キービジュアルコンテンツ -->
 	<div class="keyvisualWrap" style="user-select: auto;">
@@ -84,7 +84,7 @@
 			<ul class="topics" style="user-select: auto;">
 				<li class="topics3" style="user-select: auto;">
 					<a href="https://www.youtube.com/watch?v=nemFfWRxcSQ" class="youtube" style="user-select: auto;">
-						<img src="./denki_files/topics03.jpg" style="user-select: auto;">
+						<img src="/topics03.jpg" style="user-select: auto;">
 					</a>
 				</li>
 				<li class="topics2" style="user-select: auto;">
@@ -92,12 +92,7 @@
 						<img src="./denki_files/topics02.jpg" style="user-select: auto;">
 					</a>
 				</li>
-				<!--<li class="topics4">
-					<a href="http://kyoanishop.com/shopdetail/000000001725/" target="_blank">
-						<img src="/books/20thdenmoku/img/top/topics04.jpg">
-					</a>
-				</li>-->
-			</ul>
+ 		</ul>
 		</section>
 	</div>
 	
@@ -112,67 +107,15 @@
 					<li style="user-select: auto;">
 						<time style="user-select: auto;">2018/12/14</time>
 						<a href="http://www.kyotoanimation.co.jp/books/news/?id=69" style="user-select: auto;">
-							<div style="user-select: auto;">コミックマーケット95「京アニ＆Do Shop!」ブースにて、「二十世紀電氣目録」文庫本＆絵馬セットの発売決定！</div>
+							<div style="user-select: auto;">코믹마켓95「쿄애니＆Do Shop!」 부스에서 「20세기 전기목록」 문고본&에마 세트의 출시 결정!</div>
 						</a>
 					</li>
 					<li style="user-select: auto;">
 						<time style="user-select: auto;">2018/10/05</time>
-						<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/campaign_21thdenmoku/" style="user-select: auto;">
-							<div style="user-select: auto;">「Twitter企画 二十一世紀電氣目録をつくろう！」の作品を発表！</div>
+						<a href="https://20thdenmoku.github.io/campaign_21thdenmoku/" style="user-select: auto;">
+							<div style="user-select: auto;">「Twitter기획 21세기 전기목록을 만들자!」의 작품을 발표!</div>
 						</a>
 					</li>
-<!--
-					<li>
-						<time>2018/08/31</time>
-						<a href="/books/20thdenmoku/map/">
-							<div>「二十世紀電氣目録」の地図を公開！</div>
-						</a>
-					</li>
-					<li>
-						<time>2018/08/24</time>
-						<a href="/books/20thdenmoku/glossary/">
-							<div>用語集を公開！</div>
-						</a>
-					</li>
-					<li>
-						<time>2018/08/17</time>
-						<a href="#chara">
-							<div>キャラクター相関図を公開！</div>
-						</a>
-					</li>
-					<li>
-						<time>2018/08/13</time>
-						<a href="/books/20thdenmoku/comment/">
-							<div>発売記念コメント・推薦コメント公開！</div>
-						</a>
-						<a href="https://twitter.com/KA_esuma/status/1028932558505955329/" target="_blank">
-							<div>【Twitter企画】二十一世紀電氣目録をつくろう！ ～KAエスマ文庫 夏の自由研究～を実施！</div>
-						</a>
-					</li>
-						<li>
-						<time>2018/08/10</time>
-						<a href="/books/20thdenmoku/comment/">
-							<div>「二十世紀電氣目録」本日より発売開始！ 発売記念コメントを公開！</div>
-						</a>
-						<a href="/books/20thdenmoku/sample/">
-							<div>「二十世紀電氣目録」試し読みページを公開！</div>
-						</a>
-						<a href="/books/20thdenmoku/movie/">
-							<div>CM15秒Ver.／30秒Ver.を公開！</div>
-						</a>
-						<a href="/books/20thdenmoku/presents/">
-							<div>アイコン・壁紙プレゼント！</div>
-						</a>
-						<a href="https://twitter.com/KA_esuma/status/1027757511783342080" target="_blank">
-							<div>【Twitter企画】でんもくでドッカンキャンペーン ～KAエスマ文庫 夏の読書感想文～を実施！</div>
-						</a>
-					</li>
-					<li>
-						<time>2018/07/27</time>
-						<a href="#books">
-							<div>「二十世紀電氣目録」公式サイトオープン！ 2018年8月10日文庫発売＆アニメにします。文庫予約受付中！</div>
-						</a>
-					</li>-->
 				</ul>
 			</div>
 		</section>
@@ -188,17 +131,17 @@
 						<h2 style="user-select: auto;">INTRODUCTION</h2>
 					</div>
 				</div>
-				<p style="user-select: auto;">「二十世紀電氣目録」とは</p>
+				<p style="user-select: auto;">「20세기 전기목록」とは</p>
 			</div>
 			<div class="intro" style="user-select: auto;">
 				<div class="introItem" style="user-select: auto;">
 					<div class="copy scrollAnime" style="user-select: auto;">
-						<p style="user-select: auto;">明治、大正、昭和、平成……<br style="user-select: auto;">時代は変わる。<br style="user-select: auto;">でも<span class="red" style="user-select: auto;">恋</span>は変わらない。</p>
+						<p style="user-select: auto;">메이지、다이쇼、쇼와、헤이세이……<br style="user-select: auto;">시대는 변화한다.<br style="user-select: auto;">하지만<span class="red" style="user-select: auto;">사랑</span>은 변하지 않는다.</p>
 					</div>
 					<div class="text" style="user-select: auto;">
-						<p class="para1" style="user-select: auto;">第８回京都アニメーション大賞奨励賞受賞作<span class="dash" style="user-select: auto;">――</span>。</p>
-						<p class="para2" style="user-select: auto;">時は明治時代。二十世紀を迎えたばかりの日本・京都。<br style="user-select: auto;">西洋文化が馴染み始め、街に電気の明かりが灯りはじめたその時代。<br style="user-select: auto;">和と洋。過去と未来が入り交じる不可思議な時代。<br style="user-select: auto;">そこには決して歴史には語られない、<br style="user-select: auto;">その時代を確かに生きた市井の人々がいた。</p>
-						<p class="para3" style="user-select: auto;">これは戦争でも、政治でもない。<br style="user-select: auto;">あの時代。歴史には残らない、どこかにあった恋のひとつ。</p>
+						<p class="para1" style="user-select: auto;">제8회 교토 애니메이션 대상 장려상 수상작<span class="dash" style="user-select: auto;">――</span>。</p>
+						<p class="para2" style="user-select: auto;">때는 메이지 시대. 교토는 20세기의 여명을 맞이하고 있었다.<br style="user-select: auto;">동서양 문화가 섞여들고, 거리에는 처음으로 전깃불이 길을 밝히기 시작하던 그 시대.<br style="user-select: auto;">일본의 문화와 서양 문화, 과거와 미래가 공존하던 불가사의한 시대.<br style="user-select: auto;">역사가 우리에게 말해주지 않아도,<br style="user-select: auto;">분명 그러한 시대 속에 살아가던 평범한 사람들이 그곳에 있었다.</p>
+						<p class="para3" style="user-select: auto;">이건 전쟁도, 정치도 아니다.<br style="user-select: auto;">그저 그 시대를 살아간, 역사가 기억하지 못한 누군가의 사랑 이야기이다.</p>
 					</div>
 				</div>
 				<div class="introBg2Sp sp" style="user-select: auto;"></div>
