--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
 						<h2 style="user-select: auto;">INTRODUCTION</h2>
 					</div>
 				</div>
-				<p style="user-select: auto;">「20세기 전기목록」とは</p>
+				<p style="user-select: auto;">「20세기 전기목록」이란</p>
 			</div>
 			<div class="intro" style="user-select: auto;">
 				<div class="introItem" style="user-select: auto;">
 					<div class="copy scrollAnime" style="user-select: auto;">
-						<p style="user-select: auto;">메이지、다이쇼、쇼와、헤이세이……<br style="user-select: auto;">시대는 변화한다.<br style="user-select: auto;">하지만<span class="red" style="user-select: auto;">사랑</span>은 변하지 않는다.</p>
+						<p style="user-select: auto;">메이지、다이쇼、쇼와、헤이세이……<br style="user-select: auto;">시대는 변화한다.<br style="user-select: auto;">하지만 <span class="red" style="user-select: auto;">사랑</span>은 변하지 않는다.</p>
 					</div>
 					<div class="text" style="user-select: auto;">
 						<p class="para1" style="user-select: auto;">제8회 교토 애니메이션 대상 장려상 수상작<span class="dash" style="user-select: auto;">――</span>。</p>
