--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <link rel="icon" type="image/png" href="favicon.png" style="user-select: auto;">
 
 <!-- fonts -->
-<link href="/Arita4.0_M.otf" rel="stylesheet" style="user-select: auto;">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet" style="user-select: auto;">
 <!-- css -->
 <link rel="stylesheet" href="/common.css" style="user-select: auto;">
 <link rel="stylesheet" href="/main.css" style="user-select: auto;">
