--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <link rel="icon" type="image/png" href="favicon.png" style="user-select: auto;">
 
 <!-- fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet" style="user-select: auto;">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300&display=swap" rel="stylesheet" style="user-select: auto;">
 <!-- css -->
 <link rel="stylesheet" href="/common.css" style="user-select: auto;">
 <link rel="stylesheet" href="/main.css" style="user-select: auto;">
@@ -136,7 +136,7 @@
 			<div class="intro" style="user-select: auto;">
 				<div class="introItem" style="user-select: auto;">
 					<div class="copy scrollAnime" style="user-select: auto;">
-						<p style="user-select: auto;">메이지、다이쇼、쇼와、헤이세이……<br style="user-select: auto;">시대는 변화한다.<br style="user-select: auto;">하지만 <span class="red" style="user-select: auto;">사랑</span>은 변하지 않는다.</p>
+						<p style="user-select: auto;">메이지, 다이쇼, 쇼와, 헤이세이……<br style="user-select: auto;">시대는 변화한다.<br style="user-select: auto;">하지만 <span class="red" style="user-select: auto;">사랑</span>은 변하지 않는다.</p>
 					</div>
 					<div class="text" style="user-select: auto;">
 						<p class="para1" style="user-select: auto;">제8회 교토 애니메이션 대상 장려상 수상작<span class="dash" style="user-select: auto;">――</span>。</p>
