--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 			</div>
 		</section>
 		<div class="introNezumiBox" style="user-select: auto;">
-		<p class="introNezumi" style="user-select: auto;"><img src="./denki_files/introNezumi.png" style="user-select: auto;"></p>
+		<p class="introNezumi" style="user-select: auto;"><img src="/introNezumi.png" style="user-select: auto;"></p>
 		</div>
 	</div>
 	
@@ -162,19 +162,19 @@
 						<h2 style="user-select: auto;">STORY</h2>
 					</div>
 				</div>
-				<p style="user-select: auto;">あらすじ</p>
+				<p style="user-select: auto;">줄거리</p>
 			</div>
 			<div class="story" style="user-select: auto;">
 				<div class="storyBgCopy scrollAnime" style="user-select: auto;">
 					<div class="bg" style="user-select: auto;"></div>
-					<p class="copy copy1" style="user-select: auto;">覚えていてほしい。<br style="user-select: auto;">誰かが灯したから光がある。</p>
+					<p class="copy copy1" style="user-select: auto;">기억해줬으면 좋겠어.<br style="user-select: auto;">누군가가 킨 빛이 있다는 것을.</p>
 				</div>
 				<div class="textBox" style="user-select: auto;">
-					<p class="copy copy2" style="user-select: auto;">「うちと一緒に死んで、極楽浄土に連れてってくれる？」</p>
-					<p class="text para1" style="user-select: auto;">明治四十年。夏。京都伏見に住む<ruby style="user-select: auto;">百川稲子<rt style="user-select: auto;">ももかわいなこ</rt></ruby>は、何をやっても上手くいかず、父親に叱責される毎日。彼女にとって唯一の救いは、神仏に祈り信じることだけだった。ある日いつものように伏見稲荷で手を合わせていると、「見えへんもんは信じひん」と吐き捨てる自由奔放な少年・<ruby style="user-select: auto;">坂本喜八<rt style="user-select: auto;">さかもときはち</rt></ruby>と出逢った。彼は神仏を否定し、これからは電気の時代だと豪語する。</p>
-					<p class="text para2" style="user-select: auto;">そんな折、稲子に突如結婚の話が持ち上がる。父の一方的な決定に、しかし自分の価値はそれくらい、と諦める稲子。喜八はそんな彼女の逃げ出したいという本心を引き出し、閉ざされた家から連れ出した。</p>
-					<p class="text para3" style="user-select: auto;">結婚を止める唯一の方法は、奇書『<ruby style="user-select: auto;">電氣目録<rt style="user-select: auto;">でんきもくろく</rt></ruby>』を探し出すこと。それは喜八が幼い頃に書いた電気に関する予言書で、かつて兄・<ruby style="user-select: auto;">清六<rt style="user-select: auto;">せいろく</rt></ruby>が持ち出して行方知れずとなっていた。喜八と稲子<span class="dash" style="user-select: auto;">――</span>二人は『電氣目録』を探し、京都・滋賀の地を逃げ回る。</p>
-					<p class="text para4" style="user-select: auto;">消えた『電氣目録』。そこに隠されていた秘密とは<span class="dash" style="user-select: auto;">――</span>。</p>
+					<p class="copy copy2" style="user-select: auto;">「우리와 함께 죽어서, 극락정토에 데려다 줄래?」</p>
+					<p class="text para1" style="user-select: auto;">메이지 40년. 여름. 교토 후시미에 사는<ruby style="user-select: auto;">모모카와 이나코<rt style="user-select: auto;"></rt></ruby>는 무슨 일을 해도 잘 되지 않아, 아버지에게 질책받는 나날을 보내고 있었다. 그녀에게 유일한 구원은 신에게 기도하고 믿는 것 뿐이었다. 여느 날처럼 후시미 이나리 산에서 기도를 하고 있으면, 「보이지 않는 것은 믿을 수 없다」는 자유분방한 소년・<ruby style="user-select: auto;">사카모토 키하치<rt style="user-select: auto;"></rt></ruby>와 만났다. 그는 신을 부정하며, 앞으로는 전기의 시대라고 장담한다.</p>
+					<p class="text para2" style="user-select: auto;">그러던 차에 이나코에게 갑자기 결혼 이야기가 들려왔다. 아버지의 일방적인 결정에, 자신의 가치는 이 정도일 뿐이라며 체념하는 이나코. 키하치는 그런 그녀의 도망치고 싶은 마음을 끌어내 집에서 데리고 나왔다.</p>
+					<p class="text para3" style="user-select: auto;">결혼을 막을 유일한 방법은, 기서『<ruby style="user-select: auto;">전기목록<rt style="user-select: auto;"></rt></ruby>』찾아내는 것. 그것은 키하치가 어렸을 때 쓴 전기에 관한 예언서로 일찍이 형・<ruby style="user-select: auto;">세이로쿠<rt style="user-select: auto;"></rt></ruby>들고 가버려 행방이 묘연한 상태였다. 키하치와 이나코<span class="dash" style="user-select: auto;">――</span>두 사람은『전기목록』을 찾아 교토・시가에서 도망다닌다.</p>
+					<p class="text para4" style="user-select: auto;">사라진 『전기목록』. 거기에 숨겨져 있는 비밀이란<span class="dash" style="user-select: auto;">――</span>。</p>
 				</div>
 			</div>
 		</section>
