--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						<h2 style="user-select: auto;">CHARACTER</h2>
 					</div>
 				</div>
-				<p style="user-select: auto;">登場人物</p>
+				<p style="user-select: auto;">등장인물</p>
 			</div>
 			<div class="chara" style="user-select: auto;">
 				<div class="charaChart" style="user-select: auto;">
