--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/sp00.png" style="user-select: auto;"><img src="/keyvisualCopy.png" style="user-select: auto;"></picture>
 			</div>
 			<div class="keyvisualTopics" style="user-select: auto;">
-				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/books/20thdenmoku/img/top/topics01_sp.png" style="user-select: auto;"><img src="./denki_files/topics01.png" style="user-select: auto;"></picture>
+				<picture style="user-select: auto;"><source media="(max-width:768px)" srcset="/005.png" style="user-select: auto;"><img src="/topics01.png" style="user-select: auto;"></picture>
 			</div>
 			<ul class="topics" style="user-select: auto;">
 				<li class="topics3" style="user-select: auto;">
@@ -88,8 +88,8 @@
 					</a>
 				</li>
 				<li class="topics2" style="user-select: auto;">
-					<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/comment/" style="user-select: auto;">
-						<img src="./denki_files/topics02.jpg" style="user-select: auto;">
+					<a href="https://20thdenmoku.github.io/comment/" style="user-select: auto;">
+						<img src="/topics02.jpg" style="user-select: auto;">
 					</a>
 				</li>
  		</ul>
@@ -178,7 +178,7 @@
 				</div>
 			</div>
 		</section>
-		<p class="storyNezumi" style="user-select: auto;"><img src="./denki_files/storyNezumi.png" style="user-select: auto;"></p>
+		<p class="storyNezumi" style="user-select: auto;"><img src="storyNezumi.png" style="user-select: auto;"></p>
 	</div>
 	
 	<!--  キャラクターコンテンツ  -->
@@ -195,32 +195,32 @@
 			</div>
 			<div class="chara" style="user-select: auto;">
 				<div class="charaChart" style="user-select: auto;">
-					<img src="./denki_files/charaChart.png" style="user-select: auto;">
+					<img src="/charaChart.png" style="user-select: auto;">
 				</div>
 				<div class="charaNezumiBox" style="user-select: auto;">
-					<p class="charaNezumi" style="user-select: auto;"><img src="./denki_files/charaNezumi.png" style="user-select: auto;"></p>
+					<p class="charaNezumi" style="user-select: auto;"><img src="/charaNezumi.png" style="user-select: auto;"></p>
 				</div>
 				<div class="charaIndivi" style="user-select: auto;">
 					<div class="charaBox chara1" style="user-select: auto;">
-						<p class="name" style="user-select: auto;"><img src="./denki_files/chara01_kihati.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">新京極通りにある<ruby style="user-select: auto;">蓬莱<rt style="user-select: auto;">ほうらい</rt></ruby>仏具店で働き、機械修理も受け持つ電気をこよなく愛する少年。15歳。かつて大阪で開催された第五回内国勧業博覧会で、電気で動く近未来の機械たちに魅了され、電気に興味を持つ。「二十世紀は電気の世紀」だと信じて止まず、未来の電気の発明品を妄想した『電氣目録』を執筆した。実家はお寺だが、神仏を信用できなくなって父と大喧嘩し、家を出ている。暗いところが大の苦手。</p>
+						<p class="name" style="user-select: auto;"><img src="/chara01_kihati.png" style="user-select: auto;"></p>
+						<p class="text" style="user-select: auto;">新京極通りにある<ruby style="user-select: auto;">蓬莱<rt style="user-select: auto;"></rt></ruby>仏具店で働き、機械修理も受け持つ電気をこよなく愛する少年。15歳。かつて大阪で開催された第五回内国勧業博覧会で、電気で動く近未来の機械たちに魅了され、電気に興味を持つ。「二十世紀は電気の世紀」だと信じて止まず、未来の電気の発明品を妄想した『電氣目録』を執筆した。実家はお寺だが、神仏を信用できなくなって父と大喧嘩し、家を出ている。暗いところが大の苦手。</p>
 					</div>
 					<div class="charaBox chara2" style="user-select: auto;">
-						<p class="name" style="user-select: auto;"><img src="./denki_files/chara02_inako.png" style="user-select: auto;"></p>
+						<p class="name" style="user-select: auto;"><img src="/chara02_inako.png" style="user-select: auto;"></p>
 						<p class="text" style="user-select: auto;">京都の伏見にある百川酒造の次女として育った。15歳。純粋で活発な性格だが、どんくさいあまり失敗も多く、いつも父の甚右衛門から叱責されている。何でもできる姉と比較してしまい、自分の存在を悲観している。神仏を信じて止まず、何か困った時には伏見稲荷の<ruby style="user-select: auto;">阿久火<rt style="user-select: auto;">あくび</rt></ruby>大明神に手を合わせに行く。「信じることが取り柄」が口癖。素手での鼠捕りだけは誰にも負けない。</p>
 					</div>
 					<div class="charaBox chara3" style="user-select: auto;">
-						<p class="name" style="user-select: auto;"><img src="./denki_files/chara03_noriko.png" style="user-select: auto;"></p>
+						<p class="name" style="user-select: auto;"><img src="/chara03_noriko.png" style="user-select: auto;"></p>
 						<p class="text" style="user-select: auto;">稲子の姉。20歳。
 	稲子とは対照的に、大人びており何でも卒なくこなす才色兼備な女性。幼馴染の陸は婚約者であるが、顔を合わせれば口喧嘩ばかりしてしまう状態で、現在結婚は保留となっている。彼女の着る<ruby style="user-select: auto;">白絣<rt style="user-select: auto;">しろがすり</rt></ruby>とその長く艶やかな髪は稲子の憧れ。酒蔵に生まれ育ったが、酒の匂いが苦手。</p>
 					</div>
 					<div class="charaBox chara4" style="user-select: auto;">
-						<p class="name" style="user-select: auto;"><img src="./denki_files/chara04_kengo.png" style="user-select: auto;"></p>
+						<p class="name" style="user-select: auto;"><img src="/chara04_kengo.png" style="user-select: auto;"></p>
 						<p class="text" style="user-select: auto;">大津の米穀商・陸<span data-ruby="つねきち" style="user-select: auto;">恒吉商店の次男坊。24歳。
 	真面目で正義感が強く、稲子からは兄のように慕われている。婚約者の規子とは犬猿の仲で、規子の口の悪さにはいつも閉口している。日露戦争時には180cmを超える巨躯とその猪突猛進な戦い様から「<ruby style="user-select: auto;">陸蒸気<rt style="user-select: auto;">おかじょうき</rt></ruby>」とあだ名されたほど。現在は救世軍の活動を手伝うなど、慈善活動に精を出している。</span></p>
 					</div>
 					<div class="charaBox chara5" style="user-select: auto;">
-						<p class="name" style="user-select: auto;"><img src="./denki_files/chara05_seiroku.png" style="user-select: auto;"></p>
+						<p class="name" style="user-select: auto;"><img src="/chara05_seiroku.png" style="user-select: auto;"></p>
 						<p class="text" style="user-select: auto;">喜八の兄。精悍としているが、細い体つきでいつもへらへらしている。人をからかうところがあり、喜八には「嘘つき」と警戒されている。喜八に電気の魅力を教えた張本人であり、神仏への疑念や自由奔放な振る舞い方も彼譲り。高いところが大好きで、夢はエッフェル塔に登ること。喜八が父に燃やされそうになった『電氣目録』を預かった。</p>
 					</div>
 				</div>
