--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				</li>
 				<li class="topics2" style="user-select: auto;">
 					<a href="https://20thdenmoku.github.io/comment/" style="user-select: auto;">
-						<img src="/topics02.jpg" style="user-select: auto;">
+						<img src="/topics02.png" style="user-select: auto;">
 					</a>
 				</li>
  		</ul>
@@ -174,7 +174,7 @@
 					<p class="text para1" style="user-select: auto;">메이지 40년. 여름. 교토 후시미에 사는<ruby style="user-select: auto;">모모카와 이나코<rt style="user-select: auto;"></rt></ruby>는 무슨 일을 해도 잘 되지 않아, 아버지에게 질책받는 나날을 보내고 있었다. 그녀에게 유일한 구원은 신에게 기도하고 믿는 것 뿐이었다. 여느 날처럼 후시미 이나리 산에서 기도를 하고 있으면, 「보이지 않는 것은 믿을 수 없다」는 자유분방한 소년・<ruby style="user-select: auto;">사카모토 키하치<rt style="user-select: auto;"></rt></ruby>와 만났다. 그는 신을 부정하며, 앞으로는 전기의 시대라고 장담한다.</p>
 					<p class="text para2" style="user-select: auto;">그러던 차에 이나코에게 갑자기 결혼 이야기가 들려왔다. 아버지의 일방적인 결정에, 자신의 가치는 이 정도일 뿐이라며 체념하는 이나코. 키하치는 그런 그녀의 도망치고 싶은 마음을 끌어내 집에서 데리고 나왔다.</p>
 					<p class="text para3" style="user-select: auto;">결혼을 막을 유일한 방법은, 기서『<ruby style="user-select: auto;">전기목록<rt style="user-select: auto;"></rt></ruby>』찾아내는 것. 그것은 키하치가 어렸을 때 쓴 전기에 관한 예언서로 일찍이 형・<ruby style="user-select: auto;">세이로쿠<rt style="user-select: auto;"></rt></ruby>들고 가버려 행방이 묘연한 상태였다. 키하치와 이나코<span class="dash" style="user-select: auto;">――</span> 두 사람은『전기목록』을 찾아 교토・시가에서 도망다닌다.</p>
-					<p class="text para4" style="user-select: auto;">사라진 『전기목록』. 거기에 숨겨져 있는 비밀이란<span class="dash" style="user-select: auto;">――</span>。</p>
+					<p class="text para4" style="user-select: auto;">사라진 『전기목록』. 거기에 숨겨져 있는 비밀이란<span class="dash" style="user-select: auto;">――</span>.</p>
 				</div>
 			</div>
 		</section>
@@ -203,7 +203,7 @@
 				<div class="charaIndivi" style="user-select: auto;">
 					<div class="charaBox chara1" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara01_kihati.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">新京極通りにある<ruby style="user-select: auto;">蓬莱<rt style="user-select: auto;"></rt></ruby>仏具店で働き、機械修理も受け持つ電気をこよなく愛する少年。15歳。かつて大阪で開催された第五回内国勧業博覧会で、電気で動く近未来の機械たちに魅了され、電気に興味を持つ。「二十世紀は電気の世紀」だと信じて止まず、未来の電気の発明品を妄想した『電氣目録』を執筆した。実家はお寺だが、神仏を信用できなくなって父と大喧嘩し、家を出ている。暗いところが大の苦手。</p>
+						<p class="text" style="user-select: auto;">11111111111111111</p>
 					</div>
 					<div class="charaBox chara2" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara02_inako.png" style="user-select: auto;"></p>
