--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				</li>
 				<li class="topics2" style="user-select: auto;">
 					<a href="https://20thdenmoku.github.io/comment/" style="user-select: auto;">
-						<img src="/topics02.png" style="user-select: auto;">
+						<img src="/006.png" style="user-select: auto;">
 					</a>
 				</li>
  		</ul>
@@ -203,21 +203,19 @@
 				<div class="charaIndivi" style="user-select: auto;">
 					<div class="charaBox chara1" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara01_kihati.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">11111111111111111</p>
+						<p class="text" style="user-select: auto;">111</p>
 					</div>
 					<div class="charaBox chara2" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara02_inako.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">京都の伏見にある百川酒造の次女として育った。15歳。純粋で活発な性格だが、どんくさいあまり失敗も多く、いつも父の甚右衛門から叱責されている。何でもできる姉と比較してしまい、自分の存在を悲観している。神仏を信じて止まず、何か困った時には伏見稲荷の<ruby style="user-select: auto;">阿久火<rt style="user-select: auto;">あくび</rt></ruby>大明神に手を合わせに行く。「信じることが取り柄」が口癖。素手での鼠捕りだけは誰にも負けない。</p>
+						<p class="text" style="user-select: auto;">222</p>
 					</div>
 					<div class="charaBox chara3" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara03_noriko.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">稲子の姉。20歳。
-	稲子とは対照的に、大人びており何でも卒なくこなす才色兼備な女性。幼馴染の陸は婚約者であるが、顔を合わせれば口喧嘩ばかりしてしまう状態で、現在結婚は保留となっている。彼女の着る<ruby style="user-select: auto;">白絣<rt style="user-select: auto;">しろがすり</rt></ruby>とその長く艶やかな髪は稲子の憧れ。酒蔵に生まれ育ったが、酒の匂いが苦手。</p>
+						<p class="text" style="user-select: auto;">333</p>
 					</div>
 					<div class="charaBox chara4" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara04_kengo.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">大津の米穀商・陸<span data-ruby="つねきち" style="user-select: auto;">恒吉商店の次男坊。24歳。
-	真面目で正義感が強く、稲子からは兄のように慕われている。婚約者の規子とは犬猿の仲で、規子の口の悪さにはいつも閉口している。日露戦争時には180cmを超える巨躯とその猪突猛進な戦い様から「<ruby style="user-select: auto;">陸蒸気<rt style="user-select: auto;">おかじょうき</rt></ruby>」とあだ名されたほど。現在は救世軍の活動を手伝うなど、慈善活動に精を出している。</span></p>
+						<p class="text" style="user-select: auto;">444「<ruby style="user-select: auto;">444<rt style="user-select: auto;">444</p>
 					</div>
 					<div class="charaBox chara5" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara05_seiroku.png" style="user-select: auto;"></p>
