--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<p style="user-select: auto;">메이지, 다이쇼, 쇼와, 헤이세이……<br style="user-select: auto;">시대는 변화한다.<br style="user-select: auto;">하지만 <span class="red" style="user-select: auto;">사랑</span>은 변하지 않는다.</p>
 					</div>
 					<div class="text" style="user-select: auto;">
-						<p class="para1" style="user-select: auto;">제8회 교토 애니메이션 대상 장려상 수상작<span class="dash" style="user-select: auto;">――</span>。</p>
+						<p class="para1" style="user-select: auto;">제8회 교토 애니메이션 대상 장려상 수상작<span class="dash" style="user-select: auto;">――</span>.</p>
 						<p class="para2" style="user-select: auto;">때는 메이지 시대. 교토는 20세기의 여명을 맞이하고 있었다.<br style="user-select: auto;">동서양 문화가 섞여들고, 거리에는 처음으로 전깃불이 길을 밝히기 시작하던 그 시대.<br style="user-select: auto;">일본의 문화와 서양 문화, 과거와 미래가 공존하던 불가사의한 시대.<br style="user-select: auto;">역사가 우리에게 말해주지 않아도,<br style="user-select: auto;">분명 그러한 시대 속에 살아가던 평범한 사람들이 그곳에 있었다.</p>
 						<p class="para3" style="user-select: auto;">이건 전쟁도, 정치도 아니다.<br style="user-select: auto;">그저 그 시대를 살아간, 역사가 기억하지 못한 누군가의 사랑 이야기이다.</p>
 					</div>
@@ -171,9 +171,9 @@
 				</div>
 				<div class="textBox" style="user-select: auto;">
 					<p class="copy copy2" style="user-select: auto;">「우리와 함께 죽어서, 극락정토에 데려다 줄래?」</p>
-					<p class="text para1" style="user-select: auto;">메이지 40년. 여름. 교토 후시미에 사는<ruby style="user-select: auto;">모모카와 이나코<rt style="user-select: auto;"></rt></ruby>는 무슨 일을 해도 잘 되지 않아, 아버지에게 질책받는 나날을 보내고 있었다. 그녀에게 유일한 구원은 신에게 기도하고 믿는 것 뿐이었다. 여느 날처럼 후시미 이나리 산에서 기도를 하고 있으면, 「보이지 않는 것은 믿을 수 없다」는 자유분방한 소년・<ruby style="user-select: auto;">사카모토 키하치<rt style="user-select: auto;"></rt></ruby>와 만났다. 그는 신을 부정하며, 앞으로는 전기의 시대라고 장담한다.</p>
+					<p class="text para1" style="user-select: auto;">메이지 40년. 여름. 교토 후시미에 사는<ruby style="user-select: auto;"> 모모카와 이나코<rt style="user-select: auto;"></rt></ruby>는 무슨 일을 해도 잘 되지 않아, 아버지에게 질책받는 나날을 보내고 있었다. 그녀에게 유일한 구원은 신에게 기도하고 믿는 것 뿐이었다. 여느 날처럼 후시미 이나리 산에서 기도를 하고 있으면, 「보이지 않는 것은 믿을 수 없다」는 자유분방한 소년・<ruby style="user-select: auto;">사카모토 키하치<rt style="user-select: auto;"></rt></ruby>와 만났다. 그는 신을 부정하며, 앞으로는 전기의 시대라고 장담한다.</p>
 					<p class="text para2" style="user-select: auto;">그러던 차에 이나코에게 갑자기 결혼 이야기가 들려왔다. 아버지의 일방적인 결정에, 자신의 가치는 이 정도일 뿐이라며 체념하는 이나코. 키하치는 그런 그녀의 도망치고 싶은 마음을 끌어내 집에서 데리고 나왔다.</p>
-					<p class="text para3" style="user-select: auto;">결혼을 막을 유일한 방법은, 기서『<ruby style="user-select: auto;">전기목록<rt style="user-select: auto;"></rt></ruby>』찾아내는 것. 그것은 키하치가 어렸을 때 쓴 전기에 관한 예언서로 일찍이 형・<ruby style="user-select: auto;">세이로쿠<rt style="user-select: auto;"></rt></ruby>들고 가버려 행방이 묘연한 상태였다. 키하치와 이나코<span class="dash" style="user-select: auto;">――</span> 두 사람은『전기목록』을 찾아 교토・시가에서 도망다닌다.</p>
+					<p class="text para3" style="user-select: auto;">결혼을 막을 유일한 방법은, 기서『<ruby style="user-select: auto;">전기목록<rt style="user-select: auto;"></rt></ruby>』을 찾아내는 것. 그것은 키하치가 어렸을 때 쓴 전기에 관한 예언서로 일찍이 형・<ruby style="user-select: auto;">세이로쿠<rt style="user-select: auto;"></rt></ruby>가 들고 가버려 행방이 묘연한 상태였다. 키하치와 이나코<span class="dash" style="user-select: auto;">――</span> 두 사람은『전기목록』을 찾아 교토・시가에서 도망다닌다.</p>
 					<p class="text para4" style="user-select: auto;">사라진 『전기목록』. 거기에 숨겨져 있는 비밀이란<span class="dash" style="user-select: auto;">――</span>.</p>
 				</div>
 			</div>
